Manifests/ELK/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: trascendence-es-http
  namespace: elk
spec:
  selector:
    common.k8s.elastic.co/type: elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
